# Berger-Hopf-Standard-Model

./: .gitattributes  .gitignore  .zenodo.json  AGENTS.md  ARTIFACT_INDEX.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLAIMS.md  CLI_REFERENCE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  QUICKSTART.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  ROADMAP.md  SECURITY.md  STATUS.md  bhsm_k_collar_response_audit.py  environment.yml  pyproject.toml  requirements-hep.txt  run_benchmark.ps1  run_benchmark.sh
.devcontainer/: README.md  devcontainer.json
.github/: pull_request_template.md
artifacts/: BHSM_4d_lagrangian_projection_audit_v0_3.json  BHSM_COMPLETE_V1_RELEASE_CANDIDATE.json  BHSM_M4_GHY_boundary_variation_v6_1_1.json  BHSM_M4_Gauss_Codazzi_reduction_v6_1_1.json  BHSM_M4_Lorentz_mismatch_functionals_v6_1_2.json  BHSM_M4_Lorentz_selected_localization_report_v6_1_2.json  BHSM_M4_P2_P3_boundary_completion_audit_v6_1_2.json  BHSM_M4_Sp1_connection_normalization_v6_1_1.json  BHSM_M4_Z2_hemisphere_junction_ledger_v6_1_2.json  BHSM_M4_boundary_condition_self_adjointness_v6_1_1.json  BHSM_M4_candidate_role_matrix_v6_1_1.json  BHSM_M4_charge_current_normalization_v6_1_1.json  BHSM_M4_common_localized_action_v6_1_2.json  BHSM_M4_connection_Lorentz_localization_theorem_v6_1_2.json  BHSM_M4_controlled_bulk_mode_induction_audit_v6_1_2.json  BHSM_M4_exact_collar_geometry_v6_1_2.json  BHSM_M4_exact_zero_mode_audit_v6_1_1.json  BHSM_M4_first_order_fermionic_action_readiness_v6_1_3.json  BHSM_M4_geometric_aperture_readiness_v6_1_1.json  BHSM_M4_gravitational_Lorentz_normalization_audit_v6_1_2.json  BHSM_M4_gravitational_normalization_v6_1_1.json  BHSM_M4_great_S3_orbit_selection_theorem_v6_1_2.json  BHSM_M4_hidden_input_claim_audit_v6_1_1.json  BHSM_M4_intrinsic_boundary_action_source_map_v6_1_2.json  BHSM_M4_localization_action_source_audit_v6_1_1.json  BHSM_M4_localization_hidden_input_claim_audit_v6_1_2.json  BHSM_M4_localization_scale_primitive_audit_v6_1_2.json  BHSM_M4_localized_Sturm_Liouville_operators_v6_1_2.json  BHSM_M4_localized_aperture_gate_v6_1_2.json  BHSM_M4_localized_connection_profile_v6_1_2.json  BHSM_M4_localized_current_charge_normalization_v6_1_2.json  BHSM_M4_localized_scalar_profile_v6_1_2.json  BHSM_M4_nested_U1_classification_v6_1_1.json  BHSM_M4_no_monopole_connection_ledger_v6_1_1.json  BHSM_M4_normal_Sturm_Liouville_operator_v6_1_1.json  BHSM_M4_scalar_Lorentz_localization_theorem_v6_1_2.json  BHSM_M4_scalar_normalization_v6_1_1.json  BHSM_M4_scalar_potential_map_v6_1_1.json  BHSM_M4_scale_primitive_audit_v6_1_1.json  BHSM_M4_tensor_localization_audit_v6_1_2.json  (+872 more)
audits/: alpha_over_pi_stochastic_strength_audit.json  alpha_over_pi_stochastic_strength_audit.py  berger_base_action_coupling_normalization_audit.json  berger_base_action_coupling_normalization_audit.py  bhsm_completion_manual_theory_delta_audit.md  bhsm_completion_manual_theory_delta_audit.py  bhsm_mixing_dressed_v1_candidate_audit.md  bhsm_mixing_dressed_v1_candidate_audit.py  bhsm_sequential_blocker_closure_audit.json  bhsm_sequential_blocker_closure_audit.py  boundary_action_closure_candidate_audit.json  boundary_action_closure_candidate_audit.py  boundary_action_to_rep_connection_audit.json  boundary_action_to_rep_connection_audit.md  boundary_action_to_rep_connection_audit.py  boundary_channel_space_construction_audit.json  boundary_channel_space_construction_audit.py  boundary_connection_holonomy_construction_audit.json  (+102 more)
(+3438 files in other folders)
