[project]
name = "berger-hopf-sm-completion"
version = "0.1.0"
description = "Conditional Berger-Hopf Standard Model completion screens and audits."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "pytest",
]

[project.optional-dependencies]
benchmark = [
  "matplotlib",
  "pillow",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
